<resources>
    <string name="app_name">Forecaster</string>
    <string name="Username">Username</string>
    <string name="password">Password</string>
    <string name="forget_password">Forgot Password?</string>
    <string name="log_in">Login</string>
    <string name="new_user">New User? Register Now </string>
    <string name="Signup">  <u>Signup</u></string>
    <string name="full_name">Full Name</string>
    <string name="email_id">Email Id</string>
    <string name="phone_number">Phone Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="agree_to_term">Agree to Terms &amp; Conditions</string>
    <string name="sign_up">Sign Up</string>
    <string name="password_reset_information">We need your registered phone number to send password reset information.</string>
    <string name="submit">Submit</string>
    <string name="otp_has_send">OTP has been sent to you on your mobile number. Please enter it below.</string>
    <string name="verify">Verify</string>
    <string name="profile_management">Profile Management</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="record_your_voice">Record your voice</string>
        <string name="upload_video">Upload Video</string>
    <string name="about_us">About Us</string>
    <string name="about_us_desc">Lorem Ipsum is simply dummy text of the printing and typesetting industry,Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s,when an unknown printer took a gallery of type and scrambled it to make</string>
    <string name="price_per_questions">Price Per Questions</string>
    <string name="save">Save</string>

    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="contact_us">Contact Us</string>
    <string name="share_the_app">Share The App</string>
    <string name="about_the_app">About The App</string>
    <string name="settings">Settings</string>
    <string name="my_chats">My Chats</string>
    <string name="home">Home</string>
    <string name="openDrawer">open</string>
    <string name="closeDrawer">close</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="request_management">Request \n Management</string>
    <string name="payment_method">Payment \n Management</string>
    <string name="profile_managements">Profile \n Management</string>
    <string name="notification">Notifications</string>
    <string name="request_management2">Request Management</string>
    <string name="place_of_birth">Place Of Birth:</string>
    <string name="new_delhi">New Delhi</string>
    <string name="category">Category:</string>
    <string name="dummy">Dummy</string>
    <string name="payment_management">Payment Management</string>
    <string name="date">Date   </string>
    <string name="dreamer_name">Dreamer Name</string>
    <string name="category_type">Category Type</string>
    <string name="price">Price</string>
    <string name="chat">Chats</string>
    <string name="chat_desc">Loren Ipsum is simply dummy text of the printing and typesetting industry.</string>
    <string name="enter_your_message">Enter your message...</string>
    <string name="setting">Settings</string>
    <string name="change_password">Change Password</string>
    <string name="turn_on_notification">Turn Notification</string>
    <string name="change_language">Change Language</string>
    <string name="logout">Logout</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="select_your_concern">Write your concern</string>
    <string name="select_language">Select the Language you want to continue with :</string>
    <string name="change">Change</string>
    <string name="please_fill_following">Please fill the following:</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="new_request_from_dreamer">New Request From Dreamer</string>
    <string name="payment_sucessfully_completed">Payment Sucessfully Completed</string>
    <string name="profile_setup">Profile Setup</string>
    <string name="document_type">Document Type</string>
    <string name="attach_documents">Attach Documents</string>
    <string name="bank_account_holder_name">Bank Account Holder Name</string>
    <string name="bank_account_number">Bank Account Number</string>
    <string name="please_wait">Please wait !..</string>
    <string name="gender">Gender</string>
    <string name="psychological_counselling">Psychological Counselling</string>
    <string name="write_here">Write here...</string>
    <string name="check_internet">Please check your internet connection</string>
    <string name="compressing_video">Compressing Video</string>
    <string name="select_document_type">Select document type</string>
    <string name="full_name_validation">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVW XYZ</string>
    <string name="please_enter_otp">Please enter otp</string>
    <string name="please_select">Please Select</string>
    <string name="please_enter_dob">Please enter Date of birth</string>
    <string name="please_enter_ppq">Please enter price per question</string>
    <string name="please_enter_holder_name">Please enter account holder name</string>
    <string name="please_record_audio_first">Please record audio first</string>
    <string name="please_stop_recording">Please stop recording first</string>
    <string name="please_enter_fullname">Please enter full name</string>
    <string name="please_enter_email">Please enter email</string>
    <string name="please_enter_about_us">Please enter about us</string>
    <string name="invalid">Invalid!</string>
    <string name="please_try_again">Please try again</string>
    <string name="use_password">Use password</string>
    <string name="back">Back</string>
    <string name="abc"><center>2</center> \n ABC</string>
    <string name="delete">Delete</string>
    <string name="profile_updated_successfully">Profile updated successfully</string>
    <string name="please_enter_oldpass">Please enter old password</string>
    <string name="please_enter_newpass">Please enter new password</string>
    <string name="please_enter_confirm_password">Please enter confirm password</string>
    <string name="other_device_logged_in">Same user has been logged in another device</string>
    <string name="touch_id">Touch-ID</string>
    <string name="create_passcode">Create passcode</string>
    <string name="fingerprint_configured">Fingerprint configured</string>
    <string name="create_your_passcode">CREATE YOUR PASSCODE</string>
    <string name="please_reenter_confirm_password">Please re-enter confirm passcode</string>
    <string name="confirm_password_not_match">Confirm passcode does d match</string>
    <string name="use_passcode">Use passcode</string>
    <string name="password_not_match">Password not matched</string>
    <string name="login_successfull">Login Sucessfull</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="just_now">Just now</string>
    <string name="ok">Ok</string>
    <string name="please_play_audio_first">Please play audio first</string>
    <string name="enter_user_name">Please enter user name</string>
    <string name="enter_password">Please enter password</string>
    <string name="enter_new_pass">Please enter new password</string>
    <string name="enter_confirm_pass">Please enter confirm password</string>
    <string name="pass_not_match">Confirm password does not match</string>
    <string name="psycho_counseling">Psychological Counselling</string>
    <string name="write_about_yourself">Please write about yourself</string>
    <string name="enter_profile_photo">Please Upload Profile Photo</string>
    <string name="pls_attach_doc">Please attach document</string>
    <string name="pls_record_your_voice">Please record your voice</string>
    <string name="pls_upload_video">Please upload video</string>
    <string name="pls_select_bank">Please select bank</string>
    <string name="plz_enter_accnt_nmbr">Please enter account number</string>
    <string name="pls_enter_valid_accnum">Please enter valid account number</string>
    <string name="pls_enter_username">Please enter username</string>
    <string name="pls_enter_pass">Please enter password</string>
    <string name="please_check_terms_conditions">Please check the term and conditions check box</string>
    <string name="you_cannot_send_first_msg">You cannot send first message</string>
    <string name="self_development_counselling">Self Development Counselling</string>
    <string name="family_counselling">Family Counselling</string>
    <string name="parent_counselling">Parent Counselling</string>
    <string name="dreamer">Dreamer</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="months_ago">months ago</string>
    <string name="days_ago">days ago</string>
    <string name="day_ago">day ago</string>
    <string name="hour_ago">hour ago</string>
    <string name="marital_status">Marital status</string>
    <string name="details">Details</string>
    <string name="questions">Questions</string>
    <string name="recorded_voice">Recorded voice</string>
    <string name="select_bank" >Select Bank</string>
    <string name="upto_secounds">You can record upto 30 secounds</string>
    <string name="six_digits">Your password must be at least of six digits</string>
    <string name="max_eight_digits">Your password need not be maximum of eight digits</string>
    <string name="password_need_not_be_same_username">Your password need not be same as username</string>
    <string name="not_valid_email">Not a valid Email format eg: abc@domain.com</string>
    <string name="invalid_phone_number">Invalid phone number</string>
    <string name="upload_photo">Upload photo</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="enter_your_concern">Please enter your concern</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="device_not_support_fingerprint">Your device doesn\'t support fingerprint authentication</string>
    <string name="please_enable_fingerprint_permission">Please enable the fingerprint permission</string>
    <string name="no_finger_configured">No fingerprint configured. Please register at least one fingerprint in your device\'s Settings</string>
    <string name="please_enable_lockscreen_security">Please enable lockscreen security in your device\'s Settings</string>
    <string name="username_already_exists">Username already exists</string>
    <string name="email_already_exists">Email already exist</string>
    <string name="mobile_number_already_exists">Mobile number already exist</string>
    <string name="are_you_sure">Are you sure want to exit ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="touch_the_sensor">Touch the fingerprint sensor</string>

</resources>
