<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pop_up_background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/pop_round_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.forecaster_app.View.AvenirRegularTextView
            android:id="@+id/avenirRegularTextView23"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/please_fill_following"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <com.forecaster_app.View.AvenirRegularEditText
            android:id="@+id/oldpass_ed"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_60"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/change_language_popup2"
            android:hint="@string/old_password"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:paddingLeft="@dimen/dp_20"
            android:textColorHint="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/avenirRegularTextView23" />


        <com.forecaster_app.View.AvenirRegularEditText
            android:id="@+id/newpass_ed"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_60"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/change_language_popup2"
            android:hint="@string/new_password"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:paddingLeft="@dimen/dp_20"
            android:textColorHint="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/oldpass_ed" />


        <com.forecaster_app.View.AvenirRegularEditText
            android:id="@+id/confirm_pass_ed"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_60"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/change_language_popup2"
            android:hint="@string/confirm_new_password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:paddingLeft="@dimen/dp_20"
            android:textColorHint="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/newpass_ed" />

        <com.forecaster_app.View.AvenirDemiButton
            android:id="@+id/submitBtn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_60"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"

            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/green_shape2"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_medium"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/confirm_pass_ed" />


    </androidx.constraintlayout.widget.ConstraintLayout>





</androidx.constraintlayout.widget.ConstraintLayout>