<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/pop_up_background">

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/pop_round_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <com.Bforecaster.View.AvenirRegularTextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/are_you_sure"
            android:textColor="@color/black"
            android:textSize="@dimen/dp_17"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.Bforecaster.View.AvenirRegularButton
            android:id="@+id/yesBtn"
            android:layout_width="@dimen/dp_90"
            android:layout_height="@dimen/dp_50"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/green_shape2"
            android:text="@string/yes"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/noBtn"
            app:layout_constraintStart_toStartOf="@+id/textView7"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />


        <com.Bforecaster.View.AvenirRegularButton
            android:id="@+id/noBtn"
            android:layout_width="@dimen/dp_90"
            android:layout_height="@dimen/dp_50"
            android:layout_marginStart="8dp"
            android:background="@drawable/grey_shape"
            android:text="@string/no"
            app:layout_constraintBottom_toBottomOf="@+id/yesBtn"
            app:layout_constraintEnd_toEndOf="@+id/textView7"
            app:layout_constraintStart_toEndOf="@+id/yesBtn"
            app:layout_constraintTop_toTopOf="@+id/yesBtn" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>