<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/constraintLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    >

    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="64dp"
                android:src="@drawable/login_screen_logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="64dp"
                android:layout_marginEnd="12dp"
                android:layout_marginRight="12dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="@dimen/dp_5"
                app:cardElevation="@dimen/dp_4"

                app:cardUseCompatPadding="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView">


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <com.Bforecaster.View.AvenirRegularEditText
                        android:id="@+id/username_ed"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/dp_60"
                        android:background="@drawable/edit_text_background"
                        android:hint="@string/Username"
                        android:gravity="center|start"
                        android:textDirection="ltr"
                        android:paddingStart="@dimen/dp_20"
                        android:paddingEnd="@dimen/dp_5"
                        android:textAlignment="viewStart"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:textColorHint="#123"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />


                </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="12dp"
                android:layout_marginRight="12dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="@dimen/dp_5"
                app:cardElevation="@dimen/dp_5"
                app:cardUseCompatPadding="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView">


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <com.Bforecaster.View.AvenirRegularEditText
                        android:id="@+id/pass_ed"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/dp_60"
                        android:background="@drawable/edit_text_background"
                        android:hint="@string/password"
                        android:paddingStart="@dimen/dp_20"
                        android:paddingEnd="@dimen/dp_10"
                        android:drawableEnd="@drawable/un_view_icon"
                        android:textDirection="ltr"
                        android:textAlignment="viewStart"
                        android:imeOptions="actionNext"
                        android:inputType="textPassword"
                        android:textColorHint="#123"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />


                </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.cardview.widget.CardView>


            <com.Bforecaster.View.AvenirDemiTextView
                android:id="@+id/forgetPasswordText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/forget_password"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_medium"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView2" />


            <com.Bforecaster.View.AvenirDemiButton
                android:id="@+id/loginBtn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_60"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/btngradient"
                android:text="@string/log_in"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_large"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/forgetPasswordText" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp_40"
                android:layout_marginStart="16dp"
                android:layout_marginTop="64dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="64dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/loginBtn">

                <com.Bforecaster.View.AvenirDemiTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/new_user"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_medium_large" />

                <com.Bforecaster.View.AvenirDemiTextView
                    android:id="@+id/signuptext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Signup"
                    android:textColor="@color/green"
                    android:textSize="@dimen/text_size_medium_large" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>